# dualboot-switch

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: passwordless.md
dualboot_switch/: __init__.py  backends.py  cli.py  core.py  gui.py
tests/: test_parsers.py  test_security.py
